force-app/main/default/objects/OEA__c/OEA__c.object-meta.xml
<CustomObject>
    <label>OEA</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OEA Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>