force-app/main/default/objects/OEA__c/fields/CPR_AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>CPR_AdditionalInformation__c</fullName>
    <label>CPR_AdditionalInformation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>