force-app/main/default/objects/OEA__c/fields/CPR_AdditionalInformationSection__c.field-meta.xml
<CustomField>
    <fullName>CPR_AdditionalInformationSection__c</fullName>
    <label>CPR_AdditionalInformationSection</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>