force-app/main/default/objects/OEA__c/fields/CPR_AreAllStakeholdersReviewed__c.field-meta.xml
<CustomField>
    <fullName>CPR_AreAllStakeholdersReviewed__c</fullName>
    <label>CPR_AreAllStakeholdersReviewed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>