force-app/main/default/objects/OEA__c/fields/CPR_AreDraftsReady__c.field-meta.xml
<CustomField>
    <fullName>CPR_AreDraftsReady__c</fullName>
    <label>CPR_AreDraftsReady</label>
    <length>50</length>
    <type>Text</type>
</CustomField>