force-app/main/default/objects/OEA__c/fields/CPR_CommunicationsLiaisonApproved__c.field-meta.xml
<CustomField>
    <fullName>CPR_CommunicationsLiaisonApproved__c</fullName>
    <label>CPR_CommunicationsLiaisonApproved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>