force-app/main/default/objects/OEA__c/fields/CPR_CommunicationsLiaisonID__c.field-meta.xml
<CustomField>
    <fullName>CPR_CommunicationsLiaisonID__c</fullName>
    <label>CPR_CommunicationsLiaisonID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>