force-app/main/default/objects/OEA__c/fields/CPR_CommunicationsLiaisonName__c.field-meta.xml
<CustomField>
    <fullName>CPR_CommunicationsLiaisonName__c</fullName>
    <label>CPR_CommunicationsLiaisonName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>