force-app/main/default/objects/OEA__c/fields/CPR_DeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>CPR_DeadlineDate__c</fullName>
    <label>CPR_DeadlineDate</label>
    <type>DateTime</type>
</CustomField>