force-app/main/default/objects/OEA__c/fields/CPR_DistributionPlan__c.field-meta.xml
<CustomField>
    <fullName>CPR_DistributionPlan__c</fullName>
    <label>CPR_DistributionPlan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>