force-app/main/default/objects/OEA__c/fields/CPR_DivisionalApproverApproved__c.field-meta.xml
<CustomField>
    <fullName>CPR_DivisionalApproverApproved__c</fullName>
    <label>CPR_DivisionalApproverApproved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>