force-app/main/default/objects/OEA__c/fields/CPR_DivisionalApproverID__c.field-meta.xml
<CustomField>
    <fullName>CPR_DivisionalApproverID__c</fullName>
    <label>CPR_DivisionalApproverID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>