force-app/main/default/objects/OEA__c/fields/CPR_DivisionalApproverName__c.field-meta.xml
<CustomField>
    <fullName>CPR_DivisionalApproverName__c</fullName>
    <label>CPR_DivisionalApproverName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>