force-app/main/default/objects/OEA__c/fields/CPR_ForTranslation__c.field-meta.xml
<CustomField>
    <fullName>CPR_ForTranslation__c</fullName>
    <label>CPR_ForTranslation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>