force-app/main/default/objects/OEA__c/fields/CPR_FundingAmount__c.field-meta.xml
<CustomField>
    <fullName>CPR_FundingAmount__c</fullName>
    <label>CPR_FundingAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>