force-app/main/default/objects/OEA__c/fields/CPR_Goal__c.field-meta.xml
<CustomField>
    <fullName>CPR_Goal__c</fullName>
    <label>CPR_Goal</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>