force-app/main/default/objects/OEA__c/fields/CPR_InvoiceReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>CPR_InvoiceReceivedDate__c</fullName>
    <label>CPR_InvoiceReceivedDate</label>
    <type>DateTime</type>
</CustomField>