force-app/main/default/objects/OEA__c/fields/CPR_InvoiceStateCode__c.field-meta.xml
<CustomField>
    <fullName>CPR_InvoiceStateCode__c</fullName>
    <label>CPR_InvoiceStateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>