force-app/main/default/objects/OEA__c/fields/CPR_InvoiceStateDesc__c.field-meta.xml
<CustomField>
    <fullName>CPR_InvoiceStateDesc__c</fullName>
    <label>CPR_InvoiceStateDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>