force-app/main/default/objects/OEA__c/fields/CPR_IPData__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPData__c</fullName>
    <label>CPR_IPData</label>
    <type>DateTime</type>
</CustomField>