force-app/main/default/objects/OEA__c/fields/CPR_IPDuration__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPDuration__c</fullName>
    <label>CPR_IPDuration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>