force-app/main/default/objects/OEA__c/fields/CPR_IPEventPointPerson__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPEventPointPerson__c</fullName>
    <label>CPR_IPEventPointPerson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>