force-app/main/default/objects/OEA__c/fields/CPR_IPInterpretation__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPInterpretation__c</fullName>
    <label>CPR_IPInterpretation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>