force-app/main/default/objects/OEA__c/fields/CPR_IPObjective__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPObjective__c</fullName>
    <label>CPR_IPObjective</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>