force-app/main/default/objects/OEA__c/fields/CPR_IPTelephone__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPTelephone__c</fullName>
    <label>CPR_IPTelephone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>