force-app/main/default/objects/OEA__c/fields/CPR_IPTotalAttendees__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPTotalAttendees__c</fullName>
    <label>CPR_IPTotalAttendees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>