force-app/main/default/objects/OEA__c/fields/CPR_IPVenue__c.field-meta.xml
<CustomField>
    <fullName>CPR_IPVenue__c</fullName>
    <label>CPR_IPVenue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>