force-app/main/default/objects/OEA__c/fields/CPR_IsCommunicationsLiaison__c.field-meta.xml
<CustomField>
    <fullName>CPR_IsCommunicationsLiaison__c</fullName>
    <label>CPR_IsCommunicationsLiaison</label>
    <length>10</length>
    <type>Text</type>
</CustomField>