force-app/main/default/objects/OEA__c/fields/CPR_IsDeadlineFlexible__c.field-meta.xml
<CustomField>
    <fullName>CPR_IsDeadlineFlexible__c</fullName>
    <label>CPR_IsDeadlineFlexible</label>
    <length>50</length>
    <type>Text</type>
</CustomField>