force-app/main/default/objects/OEA__c/fields/CPR_IsDraft__c.field-meta.xml
<CustomField>
    <fullName>CPR_IsDraft__c</fullName>
    <label>CPR_IsDraft</label>
    <length>10</length>
    <type>Text</type>
</CustomField>