force-app/main/default/objects/OEA__c/fields/CPR_KitOrComplexProject__c.field-meta.xml
<CustomField>
    <fullName>CPR_KitOrComplexProject__c</fullName>
    <label>CPR_KitOrComplexProject</label>
    <length>5</length>
    <type>Text</type>
</CustomField>