force-app/main/default/objects/OEA__c/fields/CPR_LanguageAccessRelated__c.field-meta.xml
<CustomField>
    <fullName>CPR_LanguageAccessRelated__c</fullName>
    <label>CPR_LanguageAccessRelated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>