force-app/main/default/objects/OEA__c/fields/CPR_LanguagesForTranslation__c.field-meta.xml
<CustomField>
    <fullName>CPR_LanguagesForTranslation__c</fullName>
    <label>CPR_LanguagesForTranslation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>