force-app/main/default/objects/OEA__c/fields/CPR_LinkToProjectFolder__c.field-meta.xml
<CustomField>
    <fullName>CPR_LinkToProjectFolder__c</fullName>
    <label>CPR_LinkToProjectFolder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>