force-app/main/default/objects/OEA__c/fields/CPR_ModifiedCommunicationsLiaisonID__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedCommunicationsLiaisonID__c</fullName>
    <label>CPR_ModifiedCommunicationsLiaisonID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>