force-app/main/default/objects/OEA__c/fields/CPR_ModifiedCommunicationsLiaisonName__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedCommunicationsLiaisonName__c</fullName>
    <label>CPR_ModifiedCommunicationsLiaisonName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>