force-app/main/default/objects/OEA__c/fields/CPR_ModifiedDivisionalApproverID__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedDivisionalApproverID__c</fullName>
    <label>CPR_ModifiedDivisionalApproverID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>