force-app/main/default/objects/OEA__c/fields/CPR_ModifiedDivisionalApproverName__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedDivisionalApproverName__c</fullName>
    <label>CPR_ModifiedDivisionalApproverName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>