force-app/main/default/objects/OEA__c/fields/CPR_ModifiedSubmitterID__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedSubmitterID__c</fullName>
    <label>CPR_ModifiedSubmitterID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>