force-app/main/default/objects/OEA__c/fields/CPR_ModifiedSubmitterName__c.field-meta.xml
<CustomField>
    <fullName>CPR_ModifiedSubmitterName__c</fullName>
    <label>CPR_ModifiedSubmitterName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>