force-app/main/default/objects/OEA__c/fields/CPR_Payment__c.field-meta.xml
<CustomField>
    <fullName>CPR_Payment__c</fullName>
    <label>CPR_Payment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>