force-app/main/default/objects/OEA__c/fields/CPR_PendingInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>CPR_PendingInvoiceDate__c</fullName>
    <label>CPR_PendingInvoiceDate</label>
    <type>DateTime</type>
</CustomField>