force-app/main/default/objects/OEA__c/fields/CPR_PrintMaterials__c.field-meta.xml
<CustomField>
    <fullName>CPR_PrintMaterials__c</fullName>
    <label>CPR_PrintMaterials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>