force-app/main/default/objects/OEA__c/fields/CPR_ProjectCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectCompletionDate__c</fullName>
    <label>CPR_ProjectCompletionDate</label>
    <type>DateTime</type>
</CustomField>