force-app/main/default/objects/OEA__c/fields/CPR_ProjectFoldersUpdated__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectFoldersUpdated__c</fullName>
    <label>CPR_ProjectFoldersUpdated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>