force-app/main/default/objects/OEA__c/fields/CPR_ProjectManagerID__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectManagerID__c</fullName>
    <label>CPR_ProjectManagerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>