force-app/main/default/objects/OEA__c/fields/CPR_ProjectManagers__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectManagers__c</fullName>
    <label>CPR_ProjectManagers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>