force-app/main/default/objects/OEA__c/fields/CPR_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectName__c</fullName>
    <label>CPR_ProjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>