force-app/main/default/objects/OEA__c/fields/CPR_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectStartDate__c</fullName>
    <label>CPR_ProjectStartDate</label>
    <type>DateTime</type>
</CustomField>