force-app/main/default/objects/OEA__c/fields/CPR_ProjectStatusCode__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectStatusCode__c</fullName>
    <label>CPR_ProjectStatusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>