force-app/main/default/objects/OEA__c/fields/CPR_ProjectStatusDesc__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectStatusDesc__c</fullName>
    <label>CPR_ProjectStatusDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>