force-app/main/default/objects/OEA__c/fields/CPR_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>CPR_ProjectType__c</fullName>
    <label>CPR_ProjectType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Project</fullName>
            </value>
            <value>
                <fullName>Reprint</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>