force-app/main/default/objects/OEA__c/fields/CPR_RelatedProjects__c.field-meta.xml
<CustomField>
    <fullName>CPR_RelatedProjects__c</fullName>
    <label>CPR_RelatedProjects</label>
    <length>50</length>
    <type>Text</type>
</CustomField>