force-app/main/default/objects/OEA__c/fields/CPR_ReturnedRequestId__c.field-meta.xml
<CustomField>
    <fullName>CPR_ReturnedRequestId__c</fullName>
    <label>CPR_ReturnedRequestId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>