force-app/main/default/objects/OEA__c/fields/CPR_ServiceType__c.field-meta.xml
<CustomField>
    <fullName>CPR_ServiceType__c</fullName>
    <label>CPR_ServiceType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>