force-app/main/default/objects/OEA__c/fields/CPR_TargetAudience__c.field-meta.xml
<CustomField>
    <fullName>CPR_TargetAudience__c</fullName>
    <label>CPR_TargetAudience</label>
    <length>50</length>
    <type>Text</type>
</CustomField>