force-app/main/default/objects/OEA__c/fields/CPR_TranslateInto__c.field-meta.xml
<CustomField>
    <fullName>CPR_TranslateInto__c</fullName>
    <label>CPR_TranslateInto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>