force-app/main/default/objects/OEA__c/fields/CPR_Translation__c.field-meta.xml
<CustomField>
    <fullName>CPR_Translation__c</fullName>
    <label>CPR_Translation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>