force-app/main/default/objects/OEA__c/fields/CPR_Updates__c.field-meta.xml
<CustomField>
    <fullName>CPR_Updates__c</fullName>
    <label>CPR_Updates</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>