force-app/main/default/objects/OEA__c/fields/Reference_Number_Delete_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Delete_2__c</fullName>
    <label>Reference Number Delete 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>