force-app/main/default/objects/OEA__c/fields/WCR_DivisionLiaisonEmail__c.field-meta.xml
<CustomField>
    <fullName>WCR_DivisionLiaisonEmail__c</fullName>
    <label>WCR_DivisionLiaisonEmail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>