force-app/main/default/objects/OEA__c/fields/WCR_DivisionLiaisonFullName__c.field-meta.xml
<CustomField>
    <fullName>WCR_DivisionLiaisonFullName__c</fullName>
    <label>WCR_DivisionLiaisonFullName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communication Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>