force-app/main/default/objects/OEA__c/fields/WCR_DivisionLiaisonUserId__c.field-meta.xml
<CustomField>
    <fullName>WCR_DivisionLiaisonUserId__c</fullName>
    <label>WCR_DivisionLiaisonUserId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>