force-app/main/default/objects/OEA__c/fields/WCR_IsLiaison__c.field-meta.xml
<CustomField>
    <fullName>WCR_IsLiaison__c</fullName>
    <label>WCR_IsLiaison</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>