force-app/main/default/objects/OEA__c/fields/WCR_NonVerifyLiaison__c.field-meta.xml
<CustomField>
    <fullName>WCR_NonVerifyLiaison__c</fullName>
    <label>WCR_NonVerifyLiaison</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>