force-app/main/default/objects/OEA__c/fields/WCR_RequestDesc__c.field-meta.xml
<CustomField>
    <fullName>WCR_RequestDesc__c</fullName>
    <label>WCR_RequestDesc</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>