force-app/main/default/objects/OEA__c/fields/WCR_ReviewStaffFullName__c.field-meta.xml
<CustomField>
    <fullName>WCR_ReviewStaffFullName__c</fullName>
    <label>WCR_ReviewStaffFullName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>