force-app/main/default/objects/OEA__c/fields/WCR_ReviewStaffId__c.field-meta.xml
<CustomField>
    <fullName>WCR_ReviewStaffId__c</fullName>
    <label>WCR_ReviewStaffId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>