force-app/main/default/objects/OEA__c/fields/WCR_Update311__c.field-meta.xml
<CustomField>
    <fullName>WCR_Update311__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCR_Update311</label>
    <type>Checkbox</type>
</CustomField>