force-app/main/default/objects/OEA__c/fields/WCR_WCREndDate__c.field-meta.xml
<CustomField>
    <fullName>WCR_WCREndDate__c</fullName>
    <label>WCR_WCREndDate</label>
    <type>DateTime</type>
</CustomField>