force-app/main/default/objects/OEA__c/fields/WCR_WCRExtendDate__c.field-meta.xml
<CustomField>
    <fullName>WCR_WCRExtendDate__c</fullName>
    <label>WCR_WCRExtendDate</label>
    <type>DateTime</type>
</CustomField>