force-app/main/default/objects/OEA__c/fields/WCR_WCRPermanent__c.field-meta.xml
<CustomField>
    <fullName>WCR_WCRPermanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCR_WCRPermanent</label>
    <type>Checkbox</type>
</CustomField>