force-app/main/default/objects/OEA__c/fields/WCR_WebPageLocation__c.field-meta.xml
<CustomField>
    <fullName>WCR_WebPageLocation__c</fullName>
    <label>WCR_WebPageLocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOHMH Website</fullName>
            </value>
            <value>
                <fullName>9/11 Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>