force-app/main/default/objects/OEA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APP_Record__c</columns>
    <columns>CPR_ProjectName__c</columns>
    <columns>Related_Case_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>